完成接口功能 完成后台管理功能

--- a/trunk/apps/attms/bms/css/sb-admin-2.css
+++ b/trunk/apps/attms/bms/css/sb-admin-2.css
@@ -142,6 +142,10 @@ body {
     }
 }
 
+@media(max-width:768px) {
+	.navbar-top-links .dropdown-user { right:auto; left:0;}
+}
+
 .btn-outline {
     color: inherit;
     background-color: transparent;
