--- a/trunk/apps/bms/templates/layout/common.html
+++ b/trunk/apps/bms/templates/layout/common.html
@@ -65,7 +65,7 @@
 					<a href="#" data-toggle="dropdown" class="dropdown-toggle">
 						<i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
 					</a>
-					<ul class="dropdown-menu dropdown-user" style="left:0;">
+					<ul class="dropdown-menu dropdown-user">
 						<li>
 							<a href="<?php echo pcUrl('index','flush');?>"><i class="fa fa-refresh fa-fw"></i>刷新缓存</a>
 						</li>
