--- a/trunk/apps/www/mine/css/style.css
+++ b/trunk/apps/www/mine/css/style.css
@@ -70,18 +70,19 @@ p { margin:5px 0 5px 0; }
 /*public share class end*/
 
 /*private share modifiable style start*/
-a { color:#666666; text-decoration:none; }
+a { color:#D5540A; text-decoration:none; }
 a:hover { color:#D5540A; text-decoration:none; }
 html { font-size:10px; }
 body,input,textarea,button,select { font-family:"Helvetica Neue","Arial","Microsoft YaHei","微软雅黑","宋体"; line-height:1.4em; font-size:14px; color:#333; }
-body { background-color:white; }
+body { background-color:white; -webkit-font-smoothing:antialiased; }
+body.gray_body { background-color:#EBEBEB; }
 
 .red { color:#D5540A; }
 .blue { color:#009ED4; }
 .green { color:#3d9a32; }
 .gray { color:#999999; }
 .black { color:#000; }
-.body { width:1000px; margin:0 auto; }
+.body { margin:0 10px; }
 /*private share modifiable style end*/
 
 /*private class1 start*/
@@ -126,3 +127,62 @@ input.error { border:1px solid #D5540A; }
 
 .input_text.full_width,.input_textarea.full_width { width:100%; }
 /*private class1 end*/
+
+/*style start*/
+.head { background-color:#313036; width:100%; position:relative; height:40px; }
+	.head h1 { color:white; text-align:center; font-size:18px; line-height:40px; }
+	.head a { position:absolute; width:4em; height:40px; line-height:40px; color:white; }
+	.head a.left { left:0; padding-left:1em; }
+	.head a.right { right:0; text-align:right; padding-right:1em; }
+
+.record_body {}
+	.record_body dl { padding:10px; border-bottom:1px solid #D9D9D9; }
+		.record_body dl dt { font-size:16px; line-height:1.5em; }
+		.record_body dl dd { }
+			.record_body dl dd img { margin-right:10px; width:50px; border-radius:5px; }
+
+.chat_body {}
+	.chat_body dl { margin:10px; }
+	.chat_body dl:after { content:''; display:block; clear:both; }
+			.chat_body dl dt img { width:45px; }
+			
+		.chat_body dl dd { border:1px solid #DCDCDC; background-color:white; padding:15px 10px; position:relative; border-radius:5px; max-width:70%; }
+		.chat_body dl dd:before { content:""; display:block; width:10px; height:20px; position:absolute; top:28%; }
+		
+		.chat_body dl.left dt { float:left; margin-right:14px; }
+		.chat_body dl.left dd { float:left; }
+		.chat_body dl.left dd:before { background:url(../images/arrow_left.png); left:-10px; }
+		
+		.chat_body dl.right dt { float:right; margin-left:14px; }
+		.chat_body dl.right dd { float:right; background-color:#A2E65B; }
+		.chat_body dl.right dd:before { background:url(../images/arrow_right.png); right:-10px; }
+		
+.book_body {}
+	.book_body li { padding:10px; font-size:14px; border-bottom:1px solid #D9D9D9; }
+	.book_body li img { width:40px; vertical-align:middle; margin-right:.5em; }
+
+.padding_foot { height:60px; }
+.foot { background-color:white; border-top:1px solid #BBBBBB; position:fixed; bottom:0; width:100%; }
+	.foot li  {  float:left; width:25%; }
+	.foot li a  { display:block; width:100%; font-size:35px; color:#BBBBBB; text-align:center; padding:20px 0; }
+	.foot li a.now  { color:#2CA146; }
+
+.thumb { width:50px; border-radius:5px; }
+
+.chat_foot { position:fixed; bottom:0; width:100%; background-color:#F5F5F7; border-top:1px solid #D9D9DB; padding:10px 0; padding:10px; box-sizing:border-box; }
+	.chat_foot input { height:29px; border:1px solid #BBBBBB; border-radius:5px; width:75%; }
+	.chat_foot button { width:20%; border-radius:5px; }
+
+.time { text-align:center; margin:15px; }
+	.time span { background-color:#CECECE; color:white; padding:5px; border-radius:5px }
+
+.login_form { margin:20% 10% 0 10%; }
+	.login_form p { margin:10px 0; }
+	.login_form .input_text,.login_form .button { height:40px; border-radius:2px; }
+	.login_form .button { height:40px; }
+
+.mask { background-color:rgba(0,0,0,0.6); position:fixed; top:0; left:0; bottom:0; right:0; }
+.mask.opacity { background-color:transparent; }
+.loading { position:absolute; z-index:1000; top:50%; margin-top:-15px; width:100%; text-align:center; }
+.loading img { width:30px; }
+/*style end*/
