--- a/trunk/apps/www/template/chat.html
+++ b/trunk/apps/www/template/chat.html
@@ -1,6 +1,7 @@
 	<div class="head">
 		<h1>聊天</h1>
 	</div>
+	<div class="padding_head"></div>
 	<div class="record_body">
 		<dl ng-repeat="row in list" ng-click="goto('message',{'id':row.chat_id})">
 			<dd class="float_left">
@@ -12,29 +13,4 @@
 			<dd class="clear"></dd>
 		</dl>
 	</div>
-	<div class="padding_foot"></div>
-	<div class="foot">
-		<ul>
-			<li>
-				<a href="{{ngUrl('chat')}}" class="now">
-					<span class="iconfont icon-weixin"></span>
-				</a>
-			</li>
-			<li>
-				<a href="{{ngUrl('friend')}}">
-					<span class="iconfont icon-wo"></span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;">
-					<span class="iconfont icon-tongxunlu"></span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;">
-					<span class="iconfont icon-weixin"></span>
-				</a>
-			</li>
-		</ul>
-		<div class="clear"></div>
-	</div>
+	<div class="foot" foot></div>
