--- a/trunk/apps/www/template/message.html
+++ b/trunk/apps/www/template/message.html
@@ -2,6 +2,7 @@
 		<a href="javascript:history.back();" class="left">微信</a>
 		<h1>聊天</h1>
 	</div>
+	<div class="padding_head"></div>
 	<div class="chat_body">
 		<div class="more text_align_center padding_10" ng-show="nextPage">
 			<a href="javascript:;" ng-click="loadMore()" class="green">加载更多</a>
