--- a/trunk/apps/www/template/register.html
+++ b/trunk/apps/www/template/register.html
@@ -12,6 +12,6 @@
 			<button class="button full_width red" ng-click="submit()">注册</button>
 		</p>
 		<p>
-			<button type="button" ng-click="goto('login')" class="button full_width green">登录</button>
+			<a href="javascript:;" ng-click="goto('login')" class="green">返回登录</>
 		</p>
 	</div>
