--- a/trunk/apps/www/template/friend.html
+++ b/trunk/apps/www/template/friend.html
@@ -1,6 +1,7 @@
 	<div class="head">
 		<h1>通讯录</h1>
 	</div>
+	<div class="padding_head"></div>
 	<div class="book_body">
 		<ul>
 			<li ng-repeat="row in list" ng-click="chat(row.user_id)">
@@ -13,29 +14,5 @@
 			<dt></dt>
 		</dl>
 	</div>
-	<div class="padding_foot"></div>
-	<div class="foot">
-		<ul>
-			<li>
-				<a href="{{ngUrl('chat')}}">
-					<span class="iconfont icon-weixin"></span>
-				</a>
-			</li>
-			<li>
-				<a href="{{ngUrl('friend')}}" class="now">
-					<span class="iconfont icon-wo"></span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;">
-					<span class="iconfont icon-tongxunlu"></span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;">
-					<span class="iconfont icon-weixin"></span>
-				</a>
-			</li>
-		</ul>
-		<div class="clear"></div>
+	<div class="foot" foot>
 	</div>
