--- a/trunk/apps/web/template/mine.html
+++ b/trunk/apps/web/template/mine.html
@@ -2,7 +2,7 @@
 	<ion-content>
 	<div class="click_list">
 		<div class="height_10"></div>
-		<dl ng-click="goto('info')">
+		<dl ng-click="goto('tabs.info')">
 			<dd class="float_left"><img ng-src="{{userInfo.avatar}}" /></dd>
 			<dt>{{userInfo.nickname}}</dt>
 			<dd>账户:{{userInfo.user_name}}</dd>
@@ -18,5 +18,4 @@
 		</div>
 	</div>
 	</ion-content>
-	<div class="foot" foot></div>
 </ion-view>
