完成新版本ionic框架下页面的布局

--- a/trunk/apps/www/template/chat.html
+++ b/trunk/apps/www/template/chat.html
@@ -1,7 +1,7 @@
 <ion-view ng-class="bodyClass" data-title="聊天列表" hide-back-button="true">
 	<ion-content>
 		<div class="list">
-			<a class="item item-avatar item-icon-right" href="{{ngUrl('index')}}">
+			<a class="item item-avatar item-icon-right" href="{{ngUrl('tabs.message',{'chatId':1})}}">
 				<img src="mine/images/avatar.jpg">
 				<h2>Venkman</h2>
 				<p>Back off, man. I'm a scientist.</p>
