--- a/trunk/apps/www/template/message.html
+++ b/trunk/apps/www/template/message.html
@@ -1,19 +1,6 @@
-<ion-view ng-class="bodyClass" data-title="聊天">
-	<ion-content>
-	<ion-refresher on-refresh="loadMore()">
-	</ion-refresher>
-	<div class="chat_body">
-		<dl ng-class="row.is_me?'right':'left'" ng-repeat="row in list">
-			<dt><img ng-src="{{row.avatar}}" /></dt>
-			<dd>{{row.message}}</dd>
-		</dl>
-	</div>
-	<div class="padding_foot"></div>
-	</ion-content>
-	<div class="chat_foot">
-		<form ng-submit="submit()">
-			<input class="input_text" ng-model="form.message" />
-			<button class="button green">发送</button>
-		</form>
-	</div>
+<ion-view ng-class="bodyClass" hide-back-button="true" data-title="聊天">
+	<ion-nav-buttons side="left">
+		<button class="button back-button buttons button-clear header-item" ng-click="goto('tabs.chat')"><i class="icon ion-ios-arrow-back"></i>  聊天列表 </button>
+	</ion-nav-buttons>
+
 </ion-view>
