--- a/trunk/apps/www/template/friend.html
+++ b/trunk/apps/www/template/friend.html
@@ -1,10 +1,11 @@
 <ion-view ng-class="bodyClass" data-title="通讯录" hide-back-button="true">
 	<ion-content>
 		<div class="list">
-			<a class="item item-avatar item-icon-right" href="{{ngUrl('tabs.message',{'chatId':1})}}">
+			<a class="item item-avatar item-icon-right" href="{{ngUrl('message',{'chatId':1})}}">
 				<img src="mine/images/avatar.jpg">
 				<h2 class="padding-top">Venkman</h2>
 			</a>
 		</div>
 	</ion-content>
+	<div class="tabs-icon-top" foot>
 </ion-view>
