--- a/trunk/apps/www/template/message.html
+++ b/trunk/apps/www/template/message.html
@@ -1,6 +1,3 @@
-<ion-view ng-class="bodyClass" hide-back-button="true" data-title="聊天">
-	<ion-nav-buttons side="left">
-		<button class="button back-button buttons button-clear header-item" ng-click="goto('tabs.chat')"><i class="icon ion-ios-arrow-back"></i>  聊天列表 </button>
-	</ion-nav-buttons>
+<ion-view ng-class="bodyClass" data-title="聊天">
 
 </ion-view>
