--- a/trunk/apps/www/template/mine.html
+++ b/trunk/apps/www/template/mine.html
@@ -1,7 +1,7 @@
-<ion-view ng-class="bodyClass" data-title="我">
+<ion-view ng-class="bodyClass" data-title="我" hide-back-button="true">
 	<ion-content>
 		<div class="list">
-			<div class="item item-avatar item-icon-right" ng-click="goto('tabs.info')">
+			<div class="item item-avatar item-icon-right" ng-click="goto('info')">
 				<img src="mine/images/avatar.jpg">
 				<h2>Song</h2>
 				<p>账户：songyun18</p>
@@ -17,4 +17,5 @@
 			<button class="button button-block button-assertive">退出</button>
 		</div>
 	</ion-content>
+	<div class="tabs-icon-top" foot>
 </ion-view>
