--- a/trunk/apps/www/template/message.html
+++ b/trunk/apps/www/template/message.html
@@ -1,3 +1,25 @@
-<ion-view ng-class="bodyClass" data-title="聊天">
-
+<ion-view ng-class="bodyClass" hide-tabs="true" hide-back-button="true" data-title="聊天">
+	<ion-nav-buttons side="left">
+		<a href="{{ngUrl('tabs.chat')}}" nav-direction="back" style="text-decoration:none;">
+		<button class="button back-button buttons button-clear header-item"><i class="icon ion-ios-arrow-back"></i>  聊天列表 </button>
+		</a>
+	</ion-nav-buttons>
+	<ion-content>
+		<ion-refresher on-refresh="loadMore()"></ion-refresher>
+		<div class="chat_body">
+			<dl ng-class="row.is_me?'right':'left'" ng-repeat="row in list">
+				<dt><img ng-src="{{row.avatar}}" /></dt>
+				<dd>{{row.message}}</dd>
+			</dl>
+		</div>
+		
+		<div class="padding_foot"></div>
+	</ion-content>
+	<div class="chat_foot">
+		<form ng-submit="submit()">
+			<input class="input_text" ng-model="form.message" />
+			&nbsp;
+			<button class="button button-positive">发送</button>
+		</form>
+	</div>
 </ion-view>
