--- a/trunk/apps/www/template/mine.html
+++ b/trunk/apps/www/template/mine.html
@@ -14,7 +14,7 @@
 			</a>
 		</div>
 		<div class="padding">
-			<button class="button button-block button-assertive">退出</button>
+			<button class="button button-block button-assertive" ng-click="logout()">退出</button>
 		</div>
 	</ion-content>
 	<div class="tabs-icon-top" foot>
