--- a/trunk/apps/www/mine/css/style.css
+++ b/trunk/apps/www/mine/css/style.css
@@ -5,7 +5,7 @@
 */
 
 ion-view.gray_body { background-color:#EBEBEB; }
-.input_text { width:15em; height:2.4em; border:1px solid #CCC; box-sizing:border-box; -moz-box-sizing:border-box; padding:0 0.8em; }
+.input_text { width:15em; height:2.4em; border:1px solid #CCC; box-sizing:border-box; -moz-box-sizing:border-box; padding:0 0.8em; -webkit-appearance:none; }
 .thumb { width:50px; border-radius:5px;}
 .tabs .tab-item.tab-item-active { color:#387ef5; }
 .padding_foot { height:50px; }
@@ -28,5 +28,5 @@ ion-view.gray_body { background-color:#EBEBEB; }
 
 
 .chat_foot { position:fixed; bottom:0; width:100%; background-color:#F5F5F7; border-top:1px solid #D9D9DB; padding:10px 0; padding:10px; box-sizing:border-box; }
-	.chat_foot input { height:29px; border:1px solid #BBBBBB; border-radius:5px; width:75%; }
-	.chat_foot .button { width:20%; height:29px; min-height:29px; line-height:29px; }
+	.chat_foot .input_text { height:38px; border:1px solid #BBBBBB; border-radius:5px; width:75%; }
+	.chat_foot .button { width:20%; height:38px; min-height:38px; line-height:38px; }
