branch_ionic_new 	安卓下面的完善

--- a/trunk/apps/www/template/info.html
+++ b/trunk/apps/www/template/info.html
@@ -1,5 +1,5 @@
 <ion-view ng-class="bodyClass" hide-back-button="false" data-title="个人资料">
-	<ion-content>
+	<ion-content overflow-scroll="false">
 		<form action="{{formUrl}}" method="post" enctype="multipart/form-data" data-callback="callback">
 		<div class="list">
 			<label class="item item-input">
