--- a/trunk/apps/www/template/chat.html
+++ b/trunk/apps/www/template/chat.html
@@ -1,5 +1,5 @@
 <ion-view ng-class="bodyClass" data-title="聊天列表" hide-back-button="true">
-	<ion-content>
+	<ion-content overflow-scroll="false">
 		<div class="list">
 			<a class="item item-avatar item-icon-right" href="javascript:;" ng-click="joinRoom('tabs.message',{'chatId':row.chat_id})" ng-repeat="row in list" nav-direction="forward">
 				<img ng-src="{{row.avatar}}">
@@ -9,6 +9,4 @@
 			</a>
 		</div>
 	</ion-content>
-	<div class="tabs-icon-top" foot>
-	</div>
 </ion-view>
