--- a/trunk/apps/www/template/friend.html
+++ b/trunk/apps/www/template/friend.html
@@ -1,5 +1,5 @@
 <ion-view ng-class="bodyClass" data-title="通讯录" hide-back-button="true">
-	<ion-content>
+	<ion-content overflow-scroll="false">
 		<div class="list">
 			<a class="item item-avatar item-icon-right" href="javascript:;" ng-click="chat(row.user_id)" ng-repeat="row in list">
 				<img ng-src="{{row.avatar}}">
@@ -7,5 +7,4 @@
 			</a>
 		</div>
 	</ion-content>
-	<div class="tabs-icon-top" foot>
 </ion-view>
