branch_ionic_new 	最终版完成

--- a/trunk/apps/www/template/mine.html
+++ b/trunk/apps/www/template/mine.html
@@ -7,7 +7,7 @@
 				<p>账户：{{userInfo.user_name}}</p>
 				<i class="icon ion-chevron-right icon-accessory"></i>
 			</div>
-			<a class="item item-icon-left item-icon-right" href="#">
+			<a class="item item-icon-left item-icon-right" href="javascript:;">
 				<i class="icon ion-ios-gear"></i>
 				设置
 				<i class="icon ion-chevron-right icon-accessory"></i>
