branch_ionic_new 	增加站内信功能

--- a/trunk/apps/www/mine/css/style.css
+++ b/trunk/apps/www/mine/css/style.css
@@ -3,17 +3,63 @@
 	@auther:Christopher_Song
 	版权所有，侵权必究
 */
+.test { border:1px solid red; }
+.clear { clear:both; font-size:0; }
+.clear_left { clear:left; font-size:0; }
+.clear_right { clear:right; font-size:0; }
+.float_left { float:left; }
+.float_right { float:right; }
+.margin_right { margin-right:10px; }
+.margin_bottom { margin-bottom:10px; }
+.margin_right_15 { margin-right:15px; }
+.margin_bottom_15 { margin-bottom:15px; }
+.margin_top_15 { margin-top:15px; }
+.margin_right_20 { margin-right:20px; }
+.margin_bottom_20 { margin-bottom:20px; }
+.margin_top_20 { margin-top:20px; }
+.margin_center { margin:0 auto; }
+.padding_10 { padding:10px; }
+.padding_20 { padding:20px; }
+.padding_30 { padding:30px; }
+.padding_40 { padding:40px; }
+.height_10 { height:10px; }
+.height_15 { height:15px; }
+.height_20 { height:20px; }
+.height_30 { height:30px; }
+.height_40 { height:40px; }
+
+.line_through { text-decoration:line-through; }
+.line_height { line-height:1.5em; }
+.font_size_10 { font-size:10px; }
+.font_size_12 { font-size:12px; }
+.font_size_13 { font-size:13px; }
+.font_size_14 { font-size:14px; }
+.font_size_15 { font-size:15px; }
+.font_size_16 { font-size:16px; }
+.font_size_18 { font-size:18px; }
+.font_size_20 { font-size:20px; }
+.text_align_center { text-align:center; }
+.text_align_left { text-align:left; }
+.text_align_right { text-align:right; }
+.vertical_align_top { vertical-align:top; }
+.vertical_align_middle { vertical-align:middle; }
+.vertical_align_bottom { vertical-align:bottom; }
+.display_none { display:none; }
+.italic { font-style:italic; }
+.bold { font-weight:bold; }
+
+.full_width { width:100%; }
 
 ion-view.gray_body { background-color:#EBEBEB; }
 .input_text { width:15em; height:2.4em; border:1px solid #CCC; box-sizing:border-box; -moz-box-sizing:border-box; padding:0 0.8em; -webkit-appearance:none; }
-.thumb { width:50px; border-radius:5px;}
+.thumb { width:50px; height:50px; border-radius:5px;}
 .tabs .tab-item.tab-item-active { color:#387ef5; }
 .padding_foot { height:60px; }
 
 .chat_body {}
 	.chat_body dl { margin:10px; }
 	.chat_body dl:after { content:''; display:block; clear:both; }
-			.chat_body dl dt img { width:45px; }
+			.chat_body dl dt img { width:45px; height:45px; }
 			
 		.chat_body dl dd { border:1px solid #DCDCDC; background-color:white; padding:15px 10px; position:relative; border-radius:5px; max-width:70%; }
 		.chat_body dl dd:before { content:""; display:block; width:10px; height:20px; position:absolute; top:28%; }
@@ -30,3 +76,17 @@ ion-view.gray_body { background-color:#EBEBEB; }
 .chat_foot { position:fixed; bottom:0; width:100%; background-color:#F5F5F7; border-top:1px solid #D9D9DB; padding:10px 0; padding:10px; box-sizing:border-box; }
 	.chat_foot .input_text { height:38px; border:1px solid #BBBBBB; border-radius:5px; width:75%; }
 	.chat_foot .button { width:20%; height:38px; min-height:38px; line-height:38px; }
+
+.user_list {  padding:0 10px 10px 10px; }
+	.user_list ul { }
+	.user_list ul li { float:left;  text-align:center; margin:5px; }
+		.user_list ul li a { text-decoration:none; display:block; position:relative; }
+		.user_list ul li img { width:60px; height:60px; border-radius:60px; }
+		.user_list ul li h3 { font-size:14px; color:#666; margin:0; }
+		/*
+		.user_list ul li span { position:absolute; top:0; left:0; width:60px; height:60px; background-color:rgba(0,0,0,0.5); border-radius:60px; line-height:60px; color:#BCBCBC; }
+		*/
+		.user_list ul li span { position:absolute; top:30px; left:0; width:60px; height:30px; background-color:rgba(0,0,0,0.5); border-bottom-left-radius:60px; border-bottom-right-radius:60px; line-height:30px; color:white; }
+
+.item-icon-left .icon.spec {  font-size:30px; }
+
