--- a/trunk/apps/www/template/tabs.html
+++ b/trunk/apps/www/template/tabs.html
@@ -5,7 +5,7 @@
 	<ion-tab title="朋友" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="{{ngUrl('tabs.friend')}}">
 		<ion-nav-view name="tabs-friend"></ion-nav-view>
 	</ion-tab>
-	<ion-tab title="发现" icon-off="ion-clock" icon-on="ion-clock">
+	<ion-tab title="发现" icon-off="ion-clock" icon-on="ion-clock" href="{{ngUrl('tabs.find')}}">
 		<ion-nav-view name="tabs-find"></ion-nav-view>
 	</ion-tab>
 	<ion-tab title="我" icon-off="ion-person" icon-on="ion-person" href="{{ngUrl('tabs.mine')}}">
