--- a/trunk/apps/www/template/chat.html
+++ b/trunk/apps/www/template/chat.html
@@ -1,11 +1,12 @@
 <ion-view ng-class="bodyClass" data-title="聊天列表" hide-back-button="true">
 	<ion-content overflow-scroll="false">
-		<div class="list">
+		<div class="list chat_list">
 			<a class="item item-avatar item-icon-right" href="javascript:;" ng-click="joinRoom('tabs.message',{'chatId':row.chat_id})" ng-repeat="row in list" nav-direction="forward">
 				<img ng-src="{{row.avatar}}">
 				<h2>{{row.user_name}}</h2>
 				<p>{{row.last_message}}</p>
 				<i class="icon ion-chevron-right icon-accessory"></i>
+				<span class="badge badge-assertive" ng-show="row.unread_count!=0">{{row.unread_count}}</span>
 			</a>
 		</div>
 	</ion-content>
